2008-02-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Fixed some issues with the importer and color theming styles,
      made the exported SLD more robust against geometry types.

2008-03-09 mentaer <sstein@geo.unizh.ch>
	  renamed CutPolygonPlugIn to SplitPolygonPlugIn 
	  added CutPolygon PlugIn from SIGLE
	  Adding  src/org/openjump/core/ui/plugin/edittoolbox/CutPolygonSIGLEPlugIn.java
      Adding  src/org/openjump/core/ui/plugin/edittoolbox/cursortools/CutPolygon.gif
      Adding  src/org/openjump/core/ui/plugin/edittoolbox/cursortools/CutPolygonTool.java
      Change  src/org/openjump/OpenJumpConfiguration.java
      		  + language files
      
2008-02-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/CrossVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/CircleVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/TriangleVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/StarVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java,
      src/com/vividsolutions/jump/workbench/JUMPConfiguration.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/VertexStyle.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/SquareVertexStyle.java2xml:
      Added fill/nofill capability to custom symbols (like Triangle).
      Re-enabled the DeeChangeStylesPlugIn (instead of the old ChangeStylesPlugIn).

2008-02-27 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/CustomTexturePaint.java,
      src/com/vividsolutions/jump/workbench/ui/style/BasicStylePanel.java:
      Fixed smaller bugs concerning custom fill patterns from SVG.

2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>